--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -5,4 +5,10 @@
         <attr name="iconSrc" format="reference" />
         <attr name="textString" format="string" />
     </declare-styleable>
+    <!-- res/values/story_item.xml -->
+    <declare-styleable name="StoryItem">
+        <attr name="storyImage" format="reference" />
+        <attr name="storyTitle" format="string" />
+        <attr name="storyDescription" format="string" />
+    </declare-styleable>
 </resources>
