update profile avatar bottom sheet

--- a/app/src/main/res/layout/choose_image_bottom_modal.xml
+++ b/app/src/main/res/layout/choose_image_bottom_modal.xml
@@ -32,6 +32,7 @@
             app:iconSrc="@drawable/ic_gallery"
             app:textString="Chọn từ thư viện" />
         <com.example.fimae.fragments.BottomModalItemView
+            android:id="@+id/takePhoto"
             app:layout_constraintTop_toBottomOf="@id/choose_image"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
