--- a/app/src/main/res/layout/bottom_modal_item.xml
+++ b/app/src/main/res/layout/bottom_modal_item.xml
@@ -5,6 +5,7 @@
 xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/bottom_model_item"
     android:layout_width="match_parent"
     android:background="@drawable/bottom_model_item_background"
     android:clickable="true"
