add layout video

--- a/app/src/main/res/layout/fragment_story_tab.xml
+++ b/app/src/main/res/layout/fragment_story_tab.xml
@@ -5,15 +5,10 @@
     android:layout_height="match_parent"
     tools:context=".fragments.StoryTabFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recycler_view_story_tab"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="Story Fragment"
-        android:gravity="center"
-        android:textColor="@color/black"
-        android:textStyle="bold"
-        android:textSize="22sp"/>
-
-
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+    />
 </FrameLayout>
