--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <androidx.viewpager.widget.ViewPager
+    <com.example.fimae.service.CustomViewPager
         android:id="@+id/view_paper"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
