--- a/app/src/main/res/layout/fragment_feed.xml
+++ b/app/src/main/res/layout/fragment_feed.xml
@@ -12,7 +12,7 @@
                 android:id="@+id/appbar"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                app:elevation="0dp"
+                android:elevation="2dp"
                 android:theme="@style/Theme.Fimae.NoActionBar"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -23,6 +23,7 @@
                     android:layout_height="?attr/actionBarSize"
                     android:background="@color/text_white"
                     app:popupTheme="@style/Theme.Fimae.PopupOverlay"
+                    android:elevation="10dp"
                     app:titleTextColor="@color/text_white">
 
                     <TextView
@@ -59,8 +60,15 @@
             <androidx.viewpager2.widget.ViewPager2
                 android:id="@+id/view_pager_video"
                 android:layout_width="match_parent"
-                android:layout_height="150dp"/>
-
+                android:layout_height="170dp"/>
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="0.5dp"
+                android:background="@drawable/divided_shape"
+                app:layout_constraintTop_toBottomOf="@id/layout_post"
+                android:layout_marginBottom="10dp"
+                app:layout_constraintLeft_toLeftOf="parent"
+                />
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/post_list"
                 android:layout_width="match_parent"
