--- a/app/src/main/res/layout/fragment_short_tab.xml
+++ b/app/src/main/res/layout/fragment_short_tab.xml
@@ -3,16 +3,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".fragments.ShortTabFragment">
+    tools:context=".fragments.ShortTabFragment"
+    android:layout_gravity="center_vertical">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recycler_view_shorts_tab"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="Short Fragment"
-        android:gravity="center"
-        android:textColor="@color/black"
-        android:textStyle="bold"
-        android:textSize="22sp"/>
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+    />
 
 </FrameLayout>
