--- a/app/src/main/res/layout/story_item.xml
+++ b/app/src/main/res/layout/story_item.xml
@@ -1,7 +1,7 @@
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/media_item_layout"
+    android:id="@+id/story_item_layout"
     app:cardCornerRadius="8dp"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content">
