--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -1,14 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout>
+<layout xmlns:tools="http://schemas.android.com/tools"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
     <data>
         <variable
             name="viewmodel"
             type="com.example.fimae.viewmodels.ProfileViewModel" />
     </data>
+<androidx.core.widget.NestedScrollView
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content">
 <androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -122,36 +124,19 @@
         android:gravity="bottom"
         app:srcCompat="@drawable/ic_copy" />
 
-    <LinearLayout
-        android:id="@+id/bioLayout"
+    <TextView
+        android:id="@+id/bioTxt"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
         android:layout_marginTop="15dp"
-        android:paddingLeft="22dp"
-        android:paddingRight="10dp"
+        android:layout_marginLeft="22dp"
+        android:layout_marginRight="10dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/idTxt"
-        android:gravity="center_vertical">
-
-        <TextView
-            android:id="@+id/bioTxt"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text=""
-            android:textColor="#000000"
-            android:textSize="16sp" />
-
-        <ImageButton
-            android:id="@+id/editBioBtn"
-            android:layout_width="18dp"
-            android:layout_height="18dp"
-            android:background="@android:color/transparent"
-            android:scaleType="fitXY"
-            android:src="@drawable/ic_edit" />
-
-    </LinearLayout>
+        android:text=""
+        android:textColor="#000000"
+        android:textSize="16sp" />
 
     <ImageButton
         android:id="@+id/editChipBtn"
@@ -162,7 +147,8 @@
         android:background="@android:color/transparent"
         android:scaleType="fitXY"
         app:layout_constraintStart_toEndOf="@+id/chipGroup"
-        app:layout_constraintTop_toBottomOf="@+id/joinDateTxt"
+        app:layout_constraintBottom_toBottomOf="@id/chipGroup"
+        app:layout_constraintTop_toTopOf="@+id/chipGroup"
         app:srcCompat="@drawable/ic_edit" />
 
     <ImageButton
@@ -174,7 +160,7 @@
         android:background="@android:color/transparent"
         android:scaleType="fitXY"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/bioLayout"
+        app:layout_constraintTop_toBottomOf="@+id/bioTxt"
         app:srcCompat="@drawable/ic_calendar" />
 
     <TextView
@@ -186,7 +172,7 @@
         android:text="@{`Đã tham gia từ ` + viewmodel.user.timeCreated}"
         android:textColor="@color/text_secondary"
         app:layout_constraintStart_toEndOf="@+id/joinDateIcon"
-        app:layout_constraintTop_toBottomOf="@+id/bioLayout" />
+        app:layout_constraintTop_toBottomOf="@+id/bioTxt" />
 
     <com.google.android.material.chip.ChipGroup
         android:id="@+id/chipGroup"
@@ -195,31 +181,9 @@
         android:layout_marginStart="22dp"
         android:layout_marginTop="12dp"
         app:layout_constraintStart_toStartOf="parent"
+        app:chipsData="@{viewmodel.user.chip}"
         app:layout_constraintTop_toBottomOf="@+id/joinDateIcon">
 
-        <com.google.android.material.chip.Chip
-            android:id="@+id/chip"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Hài hước"
-            android:textColor="@color/text_secondary"
-            app:chipBackgroundColor="@color/white"
-            app:chipStrokeColor="@color/text_tertiary"
-            app:chipStrokeWidth="1dp"
-            tools:layout_editor_absoluteX="123dp"
-            tools:layout_editor_absoluteY="377dp" />
-
-        <com.google.android.material.chip.Chip
-            android:id="@+id/chip2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Đm lập trình"
-            android:textColor="@color/text_secondary"
-            app:chipBackgroundColor="@color/white"
-            app:chipStrokeColor="@color/text_tertiary"
-            app:chipStrokeWidth="1dp"
-            tools:layout_editor_absoluteX="123dp"
-            tools:layout_editor_absoluteY="377dp" />
     </com.google.android.material.chip.ChipGroup>
 
     <View
@@ -300,5 +264,37 @@
         app:layout_constraintStart_toEndOf="@id/visitorNum"
         app:layout_constraintTop_toBottomOf="@+id/chipGroup" />
 
+
+    <com.google.android.material.tabs.TabLayout
+        android:id="@+id/tabView"
+        android:layout_width="400dp"
+        android:layout_height="wrap_content"
+        android:layout_marginHorizontal="0dp"
+        app:layout_constraintTop_toBottomOf="@id/lineBreak"
+        app:layout_constraintLeft_toLeftOf="@id/lineBreak"
+        app:layout_constraintRight_toRightOf="@id/lineBreak">
+
+        <com.google.android.material.tabs.TabItem
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:icon="@drawable/ic_post" />
+
+        <com.google.android.material.tabs.TabItem
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:icon="@drawable/ic_short"/>
+
+    </com.google.android.material.tabs.TabLayout>
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/post_list"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@id/tabView"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
+</androidx.core.widget.NestedScrollView>
 </layout>
