--- a/app/src/main/res/layout/fragment_feed.xml
+++ b/app/src/main/res/layout/fragment_feed.xml
@@ -25,7 +25,6 @@
                     app:popupTheme="@style/Theme.Fimae.PopupOverlay"
                     android:elevation="10dp"
                     app:titleTextColor="@color/text_white">
-
                     <TextView
                         android:id="@+id/toolbar_title"
                         android:layout_width="wrap_content"
@@ -37,47 +36,67 @@
                         />
                 </androidx.appcompat.widget.Toolbar>
             </com.google.android.material.appbar.AppBarLayout>
-            <!-- tab reels -->
-            <com.google.android.material.tabs.TabLayout
-                android:id="@+id/tab_layout_video"
+            <androidx.core.widget.NestedScrollView
+                android:fillViewport="true"
                 android:layout_width="match_parent"
-                android:layout_height="50dp"
-                app:tabGravity="fill"
-                app:tabMode="fixed"
-                app:tabIndicatorAnimationMode="elastic"
-                app:tabSelectedTextAppearance="@style/CustomTextAppearanceTab"
-                app:tabTextAppearance="@style/CustomTextAppearanceTab"
-                android:background="@color/text_white">
-                <com.google.android.material.tabs.TabItem
+                android:layout_height="wrap_content">
+                <androidx.constraintlayout.widget.ConstraintLayout
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="Shorts"/>
-                <com.google.android.material.tabs.TabItem
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="Stories"/>
-            </com.google.android.material.tabs.TabLayout>
-            <androidx.viewpager2.widget.ViewPager2
-                android:id="@+id/view_pager_video"
-                android:layout_width="match_parent"
-                android:layout_height="170dp"/>
-            <ImageView
-                android:layout_width="match_parent"
-                android:layout_height="0.5dp"
-                android:background="@drawable/divided_shape"
-                app:layout_constraintTop_toBottomOf="@id/layout_post"
-                android:layout_marginBottom="10dp"
-                app:layout_constraintLeft_toLeftOf="parent"
-                />
-            <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/post_list"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_marginStart="10dp"
-                android:layout_marginEnd="10dp"
-                app:layout_constraintTop_toBottomOf="@+id/appbar"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"/>
+                    android:layout_height="wrap_content">
+                    <!-- tab reels -->
+                    <com.google.android.material.tabs.TabLayout
+                        android:id="@+id/tab_layout_video"
+                        android:layout_width="match_parent"
+                        android:layout_height="50dp"
+                        app:layout_constraintTop_toTopOf="parent"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:tabGravity="fill"
+                        app:tabMode="fixed"
+                        app:tabIndicatorAnimationMode="elastic"
+                        app:tabSelectedTextAppearance="@style/CustomTextAppearanceTab"
+                        app:tabTextAppearance="@style/CustomTextAppearanceTab"
+                        android:background="@color/text_white">
+                        <com.google.android.material.tabs.TabItem
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:text="Shorts"/>
+                        <com.google.android.material.tabs.TabItem
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:text="Stories"/>
+                    </com.google.android.material.tabs.TabLayout>
+                    <androidx.viewpager2.widget.ViewPager2
+                        android:id="@+id/view_pager_video"
+                        android:layout_width="match_parent"
+                        android:layout_height="170dp"
+                        app:layout_constraintTop_toBottomOf="@id/tab_layout_video"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        />
+                    <ImageView
+                        android:id="@+id/divided_shape"
+                        android:layout_width="match_parent"
+                        android:layout_height="0.5dp"
+                        android:background="@drawable/divided_shape"
+                        app:layout_constraintTop_toBottomOf="@id/view_pager_video"
+                        android:layout_marginBottom="10dp"
+                        app:layout_constraintLeft_toLeftOf="parent"
+                        app:layout_constraintRight_toRightOf="parent"
+                        />
+                        <androidx.recyclerview.widget.RecyclerView
+                            android:id="@+id/post_list"
+                            android:nestedScrollingEnabled="false"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            app:layout_constrainedHeight="true"
+                            app:layout_constraintTop_toBottomOf="@+id/divided_shape"
+                            app:layout_constraintStart_toStartOf="parent"
+                            app:layout_constraintEnd_toEndOf="parent"
+                            android:layout_marginStart="10dp"
+                            android:layout_marginEnd="10dp" />
+                </androidx.constraintlayout.widget.ConstraintLayout>
+            </androidx.core.widget.NestedScrollView>
         </LinearLayout>
         <RelativeLayout
             android:layout_width="match_parent"
