--- a/app/src/main/res/layout/activity_post_content.xml
+++ b/app/src/main/res/layout/activity_post_content.xml
@@ -5,5 +5,14 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".activities.PostContentActivity">
+    <androidx.viewpager2.widget.ViewPager2
+        android:id="@+id/view_pager_video_short"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="horizontal"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
