--- a/app/src/main/res/layout/post_link.xml
+++ b/app/src/main/res/layout/post_link.xml
@@ -1,6 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-             android:layout_width="match_parent"
-             android:layout_height="match_parent">
-
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_alignParentStart="true"
+    android:layout_marginVertical="3dp"
+    android:maxWidth="250dp"
+    android:minWidth="50dp"
+    android:minHeight="40dp"
+    >
+    <com.example.fimae.adapters.SquareImageView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        android:id="@+id/post_image"
+        android:src="@drawable/ic_image"
+        >
+    </com.example.fimae.adapters.SquareImageView>
+    <TextView
+        android:id="@+id/post_link_img"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@id/post_image"
+        android:gravity="center_horizontal"
+        android:text="ạinklw hèienawcjklwhajbkhce"
+        android:textSize="20dp"
+        />
 </androidx.constraintlayout.widget.ConstraintLayout>
