feat: add video to story

--- a/app/src/main/res/layout/layout_story_item.xml
+++ b/app/src/main/res/layout/layout_story_item.xml
@@ -7,6 +7,7 @@
 
     <com.example.fimae.Story.utils.DynamicImageView
         android:id="@+id/mImageView"
+        android:visibility="gone"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
@@ -14,7 +15,16 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
-
+    <VideoView
+        android:id="@+id/mVideoView"
+        android:visibility="gone"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_centerInParent="true"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
     <TextView
         android:text="Bình luận"
         android:id="@+id/descriptionTextView"
@@ -23,9 +33,9 @@
         android:layout_marginStart="32dp"
         android:textSize="18sp"
         android:layout_marginEnd="32dp"
-        android:layout_marginBottom="32dp"
+        android:layout_marginBottom="16dp"
         android:background="@drawable/story_description_background"
-        android:gravity="center"
+        android:gravity="start"
         android:textColor="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
