--- a/app/src/main/res/layout/activity_edit_profile.xml
+++ b/app/src/main/res/layout/activity_edit_profile.xml
@@ -61,6 +61,7 @@
         android:layout_height="48dp"
         android:layout_marginTop="1dp"
         android:clickable="true"
+        android:background="@drawable/item_color_grey"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editProfileToolBar">
