--- a/app/src/main/res/drawable/ic_add_short.xml
+++ b/app/src/main/res/drawable/ic_add_short.xml
@@ -1,16 +1,15 @@
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
     <item>
         <shape android:shape="oval">
-            <solid android:color="@color/primary_2" /> <!-- Màu nền tím -->
+            <solid android:color="@color/white" />
             <stroke
                 android:width="2dp"
-                android:color="@color/white" />
+                android:color="@color/background_button_dark_1_startColor" />
         </shape>
     </item>
     <item
         android:gravity="center"
-        android:drawable="@drawable/baseline_add_24"
+        android:drawable="@drawable/ic_add_plus"
         android:width="24dp"
         android:height="24dp" />
-
 </layer-list>
