--- a/app/src/main/res/layout/activity_story.xml
+++ b/app/src/main/res/layout/activity_story.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".StoryActivity">
+    tools:context=".activities.StoryActivity">
 <androidx.viewpager2.widget.ViewPager2
     android:id="@+id/viewPager2"
     android:layout_width="match_parent"
